# AI-Model

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  start_api.ps1
data/: 贱货吴敏.txt
models/chunks/bge-m3/: SHA256SUMS  manifest.json
scripts/: reassemble_bge_m3_chunks.py  split_bge_m3_chunks.py
src/rag_service/: api.py  chunking.py  cli.py  config.py  generation.py  index_store.py  ingest.py  loaders.py  models.py  retrieval.py  schemas.py  service.py  vector_store.py
templates/: bge_m3_chunks.manifest.template.json
